<resources>
    <string name="app_name">SuperHeroes23</string>
    <string name="name">Nombre</string>
    <string name="occupation">Freelance</string>
    <string name="real_name">Real Name</string>
    <string name="internet_error">Error de Intenet</string>
    <string name="error">Error</string>
    <string name="search_the_hero">Busca al heroe por nombre</string>
    <string name="good">Aligment</string>
    <string name="group_afiliation">Group Afiliation</string>
    <string name="inteligence">Inteligence</string>
    <string name="speed">Speed</string>
    <string name="combat">Combat</string>
</resources>